# ruchy

./: --clean clean_code.rs  .bashrsignore  .claudeignore  .clippy.toml  .dvcignore  .envrc  .eslintrc.json  .gitignore  .htmlhintrc  .pmat-baseline.json  .pmat-gates.toml  .pmat-metrics.toml  .pmat.toml  .pmat_monitor.sh  .pmatignore  .rustfmt.toml  .tdg_baseline.json  .tdg_current.json  .tdg_tracking.sh  BACKEND_COVERAGE_PUSH.md  BACKEND_COVERAGE_VERIFICATION.md  BOOK_COMPAT_UPDATE_2025_10_06.md  BOOK_INTEGRATION.md  CHANGELOG.md  CI_CD_QUALITY_TEMPLATES.md  CLAUDE.md  CODEOWNERS  COMPLEXITY_ISSUES.md  CONTRIBUTING.md  COVERAGE_ANALYSIS_REPORT.md  COVERAGE_REPORT.md  COVERAGE_REPORT_SPRINT_89_90.md  COVERAGE_SPRINT_REPORT.md  COVERAGE_STATUS.md  Cargo.toml  DEFECT-001-IMPLEMENTATION-SUMMARY.md  DEFECT-001-PROGRESS-REPORT.md  Dockerfile  ECOSYSTEM_DASHBOARD_v1.20.0.md  ECOSYSTEM_DOCUMENTATION_UPDATE_v1.20.0.md  (+329 more)
.cargo/: config.toml  mutants.toml
.claude/: settings.local.json
.config/: nextest.toml  proptest.toml
.dvc/: config
.github/: SECURITY.md
.pmat/: baseline.json  continue_handler_expr_completion.md  continue_remaining_features.md  continue_spec_001_fixes.md  continue_to_89_of_89.md  dead-code-cache.json  eval_try_catch_retest.txt  path_to_100_percent.md  project.toml  roadmap_to_89_of_89.md  run_class_mutations.sh  run_overnight_mutations.sh  run_type_inference_mutations.sh  session_summary_grammar_completion.md  session_summary_handler_expr.md  tdg-baseline.json  tdg-rules.toml  test_book_compat.sh  test_one_liners.sh
.pmat-work/: ledger.jsonl
.ruchy/: reproducibility.toml
.ruchy-tier-baselines/: README.md  rosetta-ruchy.json  ruchy-book.json  ruchy-cli-tools-book.json  ruchy-cookbook.json  ruchy-repl-demos.json  ruchyruchy.json  tooling-with-ruchy.json
ISSUES/: profiling-tools-feature-request.md  ruchy-lambda-parser-limitations.md
baselines/: actor_concurrent_baseline.json
benches/: PERFORMANCE_BASELINE_v1.md  README.md  STATISTICAL_RESULTS.json  bytecode_vm_performance.rs  bytecode_vs_ast.rs  compilation_bench.rs  execution_bench.rs  interpreter_benchmarks.rs  matrix_data_science_benchmarks.rs  parser.rs  parser_benchmarks.rs  performance_v3_13.rs  repl_latency.rs  shared_session_performance.rs  shared_session_performance.rs.disabled  transpiler.rs  transpiler_benchmarks.rs  wasm_performance.rs
benchmarks/: PERFORMANCE_REPORT_v1.21.0.md  quality_tools_benchmark.sh  quick_benchmark.sh
contracts/: checkpoint-v1.yaml  dispatch-v1.yaml
coverage/: index.html
cron/: crontab.conf  health-check.sh  quality-monitor.sh  setup-monitoring.sh
demos/: 01-basic-syntax.ruchy  01_basic_arithmetic.ruchy  02-data-structures.ruchy  02_variables_strings.ruchy  03-functions-control.ruchy  03_control_flow.ruchy  04-advanced-features.ruchy  04_functions.ruchy  05-repl-features.ruchy  05_data_structures.ruchy  06-edge-cases.ruchy  06_method_calls.ruchy  07_boolean_logic.ruchy  08_repl_features.ruchy  09_error_handling.ruchy  10_advanced_functions.ruchy  11_complex_expressions.ruchy  12_math_operations.ruchy  13_string_operations.ruchy  14_list_operations.ruchy  15_conditionals.ruchy  16_comprehensive_example.ruchy  basic-math.replay  comprehensive-demo.replay
docs/: ACTOR_GUIDE.md  ACTOR_SYSTEM_STATUS.md  BASELINE_COMPARISONS.md  BENCHMARK_METHODOLOGY.md  BROKEN_LINKS.md  BUILD_TIME_OPTIMIZATION.md  CARGO_INTEGRATION_STRATEGY.md  CLAIMS.md  CONCURRENCY.md  DATAFRAME_GUIDE.md  DOCUMENTATION_SPRINT_v3.7.0.md  ERROR_RECOVERY_IMPLEMENTATION.md  FEATURES.md  GETTING_STARTED.md  IMPLEMENTATION_REPORT.md  INTERACTIVE-WASM-BOOK-FEASIBILITY.md  PRE_REGISTRATION.md  (+71 more)
examples/cargo_integration/: Cargo.toml  README.md  build.rs
examples/cargo_integration/src/: main.ruchy
fuzz/: Cargo.toml
fuzz/docs/bugs/: 5.0-bugs-repl.md
fuzz/fuzz_targets/: full_pipeline.rs  fuzz_cli.rs  fuzz_fmt.rs  fuzz_import.rs  fuzz_lexer.rs  fuzz_module_paths.rs  fuzz_parser.rs  fuzz_string_interpolation.rs  fuzz_transpiler.rs  interpreter_fuzzer.rs  parser.rs  property_fuzzer.rs  property_type_inference.rs  repl_input.rs  transpiler.rs  transpiler_determinism.rs  wasm_comprehensive.rs  wasm_security.rs  wasm_stress.rs
ruchy-cli/: Cargo.toml
ruchy-cli/src/: main.rs
ruchy-notebook/: Cargo.toml  SPRINT_8_COMPLETION.md  SPRINT_9_ROADMAP.md  benchmark_results.txt  performance_report.md  wasm-pack.toml
ruchy-notebook/assets/: index.html
ruchy-notebook/benches/: notebook_benchmarks.rs
ruchy-notebook/docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
ruchy-notebook/examples/tutorials/: 01-hello-ruchy.ipynb  02-data-types-variables.ipynb  03-control-flow.ipynb
ruchy-notebook/js/: manifest.json  performance-tests.js  ruchy-notebook.js  ruchy-worker.js  sw.js
ruchy-notebook/scripts/: performance-ci.sh
ruchy-notebook/src/: lib.rs
ruchy-notebook/src/api/: mod.rs
ruchy-notebook/src/converter/: mod.rs  notebook.rs  parser.rs
ruchy-notebook/src/dataframe/: arrow_df.rs  mod.rs
ruchy-notebook/src/error/: mod.rs  stack_trace.rs  suggestions.rs  types.rs
ruchy-notebook/src/memory/: arena.rs  mod.rs  slab.rs
ruchy-notebook/src/server/: mod.rs
ruchy-notebook/src/state/: global.rs  mod.rs  provenance.rs  session.rs
ruchy-notebook/src/vm/: bytecode.rs  compiler.rs  interpreter.rs  mod.rs
ruchy-notebook/src/wasm/: mod.rs
ruchy-notebook/testing/: index.html  manual-performance-suite.html  mobile-performance-test.html
ruchy-notebook/tests/: api_route_test.rs  browser_automation_tests.rs  conversion_tests.rs  dataframe_tests.rs  error_handling_tests.rs  error_types_comprehensive_tests.rs  integration_test.rs  notebook_acceptance_tests.rs  property_tests.rs  server_api_execution_test.rs  server_routes_test.rs  server_unit_tests.rs  ux_tests.rs  wasm_integration_tests.rs
ruchy-wasm/: .gitignore  Cargo.toml  README.md  RELEASE_SUMMARY_v3.138.0.md  package.json
ruchy-wasm/docs/execution/: roadmap.yaml
ruchy-wasm/src/: lib.rs
ruchy-wasm/tests/: issue_51_nested_scopes.rs  issue_52_attributes.rs  probar_wasm_tests.rs
wasm-optimize/: Cargo.toml
wasm-optimize/src/: lib.rs
(+3998 files in other folders)
